--- a/index.html
+++ b/index.html
@@ -131,13 +131,7 @@
       <div class="container max-w-screen-xl mx-auto px-4">
         <div class="flex flex-col lg:flex-row justify-between">
           <div class="mb-10 lg:mb-0">
-            <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Portfolio</h1>
-
-            <p class="font-normal text-gray-500 text-xs md:text-base">
-              I have brought here my biggest and favorite works
-              <br />
-              as a professional.
-            </p>
+            <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Experience</h1>
           </div>
 
           <div class="space-y-24">
@@ -147,12 +141,14 @@
               <span class="w-28 h-0.5 bg-gray-300 mt-5"></span>
 
               <div>
-                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">Demo API Generator</h1>
+                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">ERP Developer</h1>
 
                 <p class="font-normal text-gray-500 text-sm md:text-base">
-                  A dummy data free and documented API generator to facilitate
+                  2022 - Now
                   <br />
-                  the process of testing the front-end portion of projects.
+                  My role is to maintain, develop new funcitonalities and deliver
+                  <br />
+                  updates via docker swarm or kubernates.
                 </p>
               </div>
             </div>
@@ -163,28 +159,14 @@
               <span class="w-28 h-0.5 bg-gray-300 mt-5"></span>
 
               <div>
-                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">Demo API Generator</h1>
+                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">Developing a commercial Software</h1>
 
                 <p class="font-normal text-gray-500 text-sm md:text-base">
-                  A dummy data free and documented API generator to facilitate
+                  2019
                   <br />
-                  the process of testing the front-end portion of projects.
-                </p>
-              </div>
-            </div>
-
-            <div class="flex space-x-6">
-              <h1 class="font-normal text-gray-700 text-3xl md:text-4xl">03</h1>
-
-              <span class="w-28 h-0.5 bg-gray-300 mt-5"></span>
-
-              <div>
-                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">Demo API Generator</h1>
-
-                <p class="font-normal text-gray-500 text-sm md:text-base">
-                  A dummy data free and documented API generator to facilitate
+                  I developed a commercial inventory management application. That enhanced
                   <br />
-                  the process of testing the front-end portion of projects.
+                  multiple processes of the business based on simplicity and usability.
                 </p>
               </div>
             </div>
@@ -204,7 +186,7 @@
             <h4 class="font-medium text-gray-700 text-lg mb-4">2015 – 2016</h4>
 
             <p class="font-normal text-gray-500 text-md mb-4">
-              Lorem ipsum dolor sit amet, consectetur <br />
+              ASP.NET microservices learning path <br />
               adipiscing elit, sed do eiusmod tempor <br />
               incididunt ut labore et dolore magna aliqua.
             </p>
