--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <span class="w-28 h-0.5 bg-gray-300 mt-5"></span>
 
               <div>
-                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">ERP Developer</h1>
+                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">ERP Developer @Audaxis</h1>
 
                 <p class="font-normal text-gray-500 text-sm md:text-base">
                   2022 - Now
@@ -177,98 +177,49 @@
 
     <section class="py-10 md:py-16">
       <div class="container max-w-screen-xl mx-auto px-4">
-        <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Education</h1>
-
-        <p class="font-normal text-gray-500 text-xs md:text-base mb-20">Below is a summary of the places I studied</p>
+        <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-16">Education</h1>
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
           <div class="bg-gray-50 px-8 py-10 rounded-md">
-            <h4 class="font-medium text-gray-700 text-lg mb-4">2015 – 2016</h4>
+            <h4 class="font-medium text-gray-700 text-lg mb-4">Bachelors degree</h4>
 
             <p class="font-normal text-gray-500 text-md mb-4">
-              ASP.NET microservices learning path <br />
-              adipiscing elit, sed do eiusmod tempor <br />
-              incididunt ut labore et dolore magna aliqua.
+              2016 - 2019 <br />
+              I started Software Engineering. And covered topics such as algorithms and databases.
             </p>
 
             <div class="relative">
-              <h6 class="font-semibold text-gray-500 text-md relative z-10">See the place here</h6>
-              <span class="w-32 h-1 bg-blue-200 absolute bottom-1 left-0 z-0"></span>
+              <h6 class="font-semibold text-gray-500 text-md relative z-10">University of Constantine 2</h6>
             </div>
           </div>
 
           <div class="bg-gray-50 px-8 py-10 rounded-md">
-            <h4 class="font-medium text-gray-700 text-lg mb-4">2015 – 2016</h4>
+            <h4 class="font-medium text-gray-700 text-lg mb-4">ASP.NET microservices learning path</h4>
 
             <p class="font-normal text-gray-500 text-md mb-4">
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipiscing elit, sed do eiusmod tempor <br />
-              incididunt ut labore et dolore magna aliqua.
+              2021 <br />
+              A path designed to learn more about the small, modular, and independent deployable services.
             </p>
 
             <div class="relative">
-              <h6 class="font-semibold text-gray-500 text-md relative z-10">See the place here</h6>
-              <span class="w-32 h-1 bg-blue-200 absolute bottom-1 left-0 z-0"></span>
+              <a
+                href="https://www.pluralsight.com/paths/net-microservices"
+                class="font-semibold text-gray-500 text-md relative z-10"
+                >Visit PLURALSIGHT</a
+              >
             </div>
           </div>
 
           <div class="bg-gray-50 px-8 py-10 rounded-md">
-            <h4 class="font-medium text-gray-700 text-lg mb-4">2015 – 2016</h4>
+            <h4 class="font-medium text-gray-700 text-lg mb-4">Masters degree</h4>
 
             <p class="font-normal text-gray-500 text-md mb-4">
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipiscing elit, sed do eiusmod tempor <br />
-              incididunt ut labore et dolore magna aliqua.
+              2019 - 2021 <br />
+              I completed my studies focused on software architecture, and quality assurance.
             </p>
 
             <div class="relative">
-              <h6 class="font-semibold text-gray-500 text-md relative z-10">See the place here</h6>
-              <span class="w-32 h-1 bg-blue-200 absolute bottom-1 left-0 z-0"></span>
-            </div>
-          </div>
-
-          <div class="bg-gray-50 px-8 py-10 rounded-md">
-            <h4 class="font-medium text-gray-700 text-lg mb-4">2015 – 2016</h4>
-
-            <p class="font-normal text-gray-500 text-md mb-4">
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipiscing elit, sed do eiusmod tempor <br />
-              incididunt ut labore et dolore magna aliqua.
-            </p>
-
-            <div class="relative">
-              <h6 class="font-semibold text-gray-500 text-md relative z-10">See the place here</h6>
-              <span class="w-32 h-1 bg-blue-200 absolute bottom-1 left-0 z-0"></span>
-            </div>
-          </div>
-
-          <div class="bg-gray-50 px-8 py-10 rounded-md">
-            <h4 class="font-medium text-gray-700 text-lg mb-4">2015 – 2016</h4>
-
-            <p class="font-normal text-gray-500 text-md mb-4">
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipiscing elit, sed do eiusmod tempor <br />
-              incididunt ut labore et dolore magna aliqua.
-            </p>
-
-            <div class="relative">
-              <h6 class="font-semibold text-gray-500 text-md relative z-10">See the place here</h6>
-              <span class="w-32 h-1 bg-blue-200 absolute bottom-1 left-0 z-0"></span>
-            </div>
-          </div>
-
-          <div class="bg-gray-50 px-8 py-10 rounded-md">
-            <h4 class="font-medium text-gray-700 text-lg mb-4">2015 – 2016</h4>
-
-            <p class="font-normal text-gray-500 text-md mb-4">
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipiscing elit, sed do eiusmod tempor <br />
-              incididunt ut labore et dolore magna aliqua.
-            </p>
-
-            <div class="relative">
-              <h6 class="font-semibold text-gray-500 text-md relative z-10">See the place here</h6>
-              <span class="w-32 h-1 bg-blue-200 absolute bottom-1 left-0 z-0"></span>
+              <h6 class="font-semibold text-gray-500 text-md relative z-10">University of Constantine 2</h6>
             </div>
           </div>
         </div>
