--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
     <section class="py-10 md:py-16">
       <div class="container max-w-screen-xl mx-auto px-4">
-        <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Experience</h1>
+        <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Projects</h1>
 
         <p class="font-normal text-gray-500 text-xs md:text-base mb-20">Below is a summary of the places I studied</p>
 
@@ -312,7 +312,7 @@
 
     <section class="py-10 md:py-16">
       <div class="container max-w-screen-xl mx-auto px-4">
-        <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Brands</h1>
+        <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Skills</h1>
 
         <p class="font-normal text-gray-500 text-xs md:text-base mb-10 md:mb-20">Below is a summary of the places I studied</p>
 
