--- a/index.html
+++ b/index.html
@@ -247,64 +247,55 @@
       <div class="container max-w-screen-xl mx-auto px-4">
         <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Projects</h1>
 
-        <p class="font-normal text-gray-500 text-xs md:text-base mb-20">Below is a summary of the places I studied</p>
+        <p class="font-normal text-gray-500 text-xs md:text-base mb-20">Below is a summary of the side projects I worked on</p>
 
         <div class="flex flex-col lg:flex-row justify-between">
           <div class="space-y-8 md:space-y-16 mb-16 md:mb-0">
-            <h6 class="font-medium text-gray-400 text-base uppercase">Company</h6>
+            <h6 class="font-medium text-gray-400 text-base uppercase">Name</h6>
 
             <p class="font-semibold text-gray-600 text-base">
-              Massa Fames
-              <span class="font-normal text-gray-300">/ New York</span>
+              <a href="">TahwissaDZ</a>
+              <span class="font-normal text-gray-400">/ Mobile app</span>
             </p>
 
             <p class="font-semibold text-gray-600 text-base">
-              Massa Fames
-              <span class="font-normal text-gray-300">/ New York</span>
+              <a href="">Chat system</a>
+              <span class="font-normal text-gray-400">/ Web app</span>
             </p>
 
             <p class="font-semibold text-gray-600 text-base">
-              Massa Fames
-              <span class="font-normal text-gray-300">/ New York</span>
+              <a href="">Inventory management</a>
+              <span class="font-normal text-gray-400">/ Desktop app</span>
             </p>
 
             <p class="font-semibold text-gray-600 text-base">
-              Massa Fames
-              <span class="font-normal text-gray-300">/ New York</span>
-            </p>
-
-            <p class="font-semibold text-gray-600 text-base">
-              Massa Fames
-              <span class="font-normal text-gray-300">/ New York</span>
+              <a href="https://fouadchaker.github.io/goby-clone/">Goby website clone</a>
+              <span class="font-normal text-gray-400">/ Web page</span>
             </p>
           </div>
 
           <div class="space-y-8 md:space-y-16 mb-16 md:mb-0">
-            <h6 class="font-medium text-gray-400 text-base uppercase">Position</h6>
+            <h6 class="font-medium text-gray-400 text-base uppercase">Description</h6>
 
-            <p class="font-normal text-gray-400 text-base">Junior Front-End Developer</p>
+            <p class="font-normal text-gray-600 text-base">Application for sharing and exploring travel agency plans.</p>
 
-            <p class="font-normal text-gray-400 text-base">Junior Front-End Developer</p>
+            <p class="font-normal text-gray-600 text-base">A messenger like app with a lobby for group chat.</p>
 
-            <p class="font-normal text-gray-400 text-base">Junior Front-End Developer</p>
+            <p class="font-normal text-gray-600 text-base">A commercial app made to facilitate stock management.</p>
 
-            <p class="font-normal text-gray-400 text-base">Junior Front-End Developer</p>
-
-            <p class="font-normal text-gray-400 text-base">Junior Front-End Developer</p>
+            <p class="font-normal text-gray-600 text-base">the goal is to try out and get familliar with TailwindCSS.</p>
           </div>
 
           <div class="space-y-8 md:space-y-16">
-            <h6 class="font-medium text-gray-400 text-base uppercase">Year</h6>
+            <h6 class="font-medium text-gray-400 text-base uppercase">Frameworks</h6>
 
-            <p class="font-normal text-gray-400 text-base">2016</p>
+            <p class="font-semibold text-gray-600 text-base">Flutter | UI/UX design</p>
 
-            <p class="font-normal text-gray-400 text-base">2016</p>
+            <p class="font-semibold text-gray-600 text-base">ASP.NET core | SignalR | Real-time</p>
 
-            <p class="font-normal text-gray-400 text-base">2016</p>
+            <p class="font-semibold text-gray-600 text-base">JavaFX | MySQL</p>
 
-            <p class="font-normal text-gray-400 text-base">2016</p>
-
-            <p class="font-normal text-gray-400 text-base">2016</p>
+            <p class="font-semibold text-gray-600 text-base">TailwindCSS | Github actions</p>
           </div>
         </div>
       </div>
