edit project link

--- a/index.html
+++ b/index.html
@@ -254,23 +254,31 @@
             <h6 class="font-medium text-gray-400 text-base uppercase">Name</h6>
 
             <p class="font-semibold text-gray-600 text-base">
-              <a href="">TahwissaDZ</a>
-              <span class="font-normal text-gray-400">/ Mobile app</span>
+              <a href="">
+                TahwissaDZ
+                <span class="font-normal text-gray-400">/ Mobile app</span>
+              </a>
             </p>
 
             <p class="font-semibold text-gray-600 text-base">
-              <a href="">Chat system</a>
-              <span class="font-normal text-gray-400">/ Web app</span>
+              <a href="">
+                Chat system
+                <span class="font-normal text-gray-400">/ Web app</span>
+              </a>
             </p>
 
             <p class="font-semibold text-gray-600 text-base">
-              <a href="">Inventory management</a>
-              <span class="font-normal text-gray-400">/ Desktop app</span>
+              <a href="">
+                Inventory management
+                <span class="font-normal text-gray-400">/ Desktop app</span>
+              </a>
             </p>
 
             <p class="font-semibold text-gray-600 text-base">
-              <a href="https://fouadchaker.github.io/goby-clone/">Goby website clone</a>
-              <span class="font-normal text-gray-400">/ Web page</span>
+              <a href="https://fouadchaker.github.io/goby-clone/">
+                Goby website clone
+                <span class="font-normal text-gray-400">/ Web page</span>
+              </a>
             </p>
           </div>
 
