--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
 
             <p class="font-normal text-gray-600 text-base">Application for sharing and exploring travel agency plans.</p>
 
-            <p class="font-normal text-gray-600 text-base">A messenger like app with a lobby for group chat.</p>
+            <p class="font-normal text-gray-600 text-base">A messenger like app with a lobby for group conversations.</p>
 
-            <p class="font-normal text-gray-600 text-base">A commercial app made to facilitate stock management.</p>
+            <p class="font-normal text-gray-600 text-base">Software designed to streamline inventory management processes.</p>
 
-            <p class="font-normal text-gray-600 text-base">the goal is to try out and get familliar with TailwindCSS.</p>
+            <p class="font-normal text-gray-600 text-base">Enterprise landing page made to get familliar with TailwindCSS.</p>
           </div>
 
           <div class="space-y-8 md:space-y-16">
