edit spacing skills + about section

--- a/index.html
+++ b/index.html
@@ -296,9 +296,11 @@
       <div class="container max-w-screen-xl mx-auto px-4">
         <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Skills</h1>
 
-        <p class="font-normal text-gray-500 text-xs md:text-base mb-10 md:mb-20">Here are some of the tools I use</p>
+        <p class="font-normal text-gray-500 text-xs md:text-base mb-10 md:mb-20">
+          Here is a selection of the tools and technologies i utilise in my projects
+        </p>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-32 content-center">
           <img class="brightness-0 opacity-30" src="./resources/net.png" title=".NET" alt=".NET" />
 
           <img class="brightness-0 opacity-30" src="./resources/spring.png" title="Spring" alt="Spring" />
@@ -322,12 +324,12 @@
       </div>
     </section>
 
-    <footer class="py-10 md:py-16 mb-20 md:mb-40 lg::mb-52">
+    <footer class="py-10 md:py-16 mb-16">
       <div class="container max-w-screen-xl mx-auto px-4">
         <div class="text-center">
           <h1 class="font-medium text-gray-700 text-4xl md:text-5xl mb-5">Contact me</h1>
 
-          <p class="font-normal text-gray-400 text-md md:text-lg mb-20">Feel free to reach out! I'd love to connect.</p>
+          <p class="font-normal text-gray-400 text-md md:text-lg mb-16">Feel free to reach out! I'd love to connect.</p>
 
           <div class="flex items-center justify-center space-x-8">
             <a
