--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </p>
 
             <p class="font-semibold text-gray-600 text-base">
-              <a href="">
+              <a href="https://youtu.be/dlbnGp4iVvY">
                 Inventory management
                 <span class="font-normal text-gray-400">/ Desktop app</span>
               </a>
