add profile picture

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="py-10 md:py-16 h-screen flex items-center justify-center">
       <div class="text-center">
         <div class="flex justify-center mb-16">
-          <img src="./resources/home-img-105c44a6.png" alt="Image" />
+          <img class="h-64 w-64 rounded-full grayscale contrast-125" src="./resources/portfoliophoto.jpg" alt="Image" />
         </div>
 
         <h6 class="font-medium text-gray-600 text-lg md:text-2xl uppercase mb-8">Fouad Chaker</h6>
