edit experience description

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                 <p class="font-normal text-gray-500 text-sm md:text-base">
                   2022 - Now
                   <br />
-                  My role is to maintain, develop new features and deliver updates
+                  My role is to maintain, develop new features and deliver updates via docker
                   <br />
-                  via docker swarm, kubernates and linux installations.
+                  swarm, kubernates and linux installations.
                 </p>
               </div>
             </div>
@@ -159,12 +159,12 @@
               <span class="w-28 h-0.5 bg-gray-300 mt-5"></span>
 
               <div>
-                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">Developing a commercial Software</h1>
+                <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">Inventory management software</h1>
 
                 <p class="font-normal text-gray-500 text-sm md:text-base">
                   2019
                   <br />
-                  I developed a commercial inventory management application. That enhanced
+                  I developed an inventory management application for a client. That enhanced
                   <br />
                   multiple processes of the business based on simplicity, usability and efficiency.
                 </p>
