--- a/index.html
+++ b/index.html
@@ -143,9 +143,8 @@
               <div>
                 <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">ERP Developer @Audaxis</h1>
 
+                <p class="font-normal text-gray-500 text-sm md:text-base mb-3">2022 - Now</p>
                 <p class="font-normal text-gray-500 text-sm md:text-base">
-                  2022 - Now
-                  <br />
                   My role is to maintain, develop new features and deliver updates via docker
                   <br />
                   swarm, kubernates and linux installations.
@@ -161,9 +160,8 @@
               <div>
                 <h1 class="font-normal text-gray-700 text-3xl md:text-4xl mb-5">Inventory management software</h1>
 
+                <p class="font-normal text-gray-500 text-sm md:text-base mb-3">2019</p>
                 <p class="font-normal text-gray-500 text-sm md:text-base">
-                  2019
-                  <br />
                   I developed an inventory management application for a client. That enhanced
                   <br />
                   multiple processes of the business based on simplicity, usability and efficiency.
