--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h4 class="font-medium text-gray-700 text-lg mb-4">Frontend developement</h4>
 
             <p class="font-normal text-gray-500 text-md">
-              For building web UIs. I have knowledge using Angular for web apps and Flutter for mobile applications.
+              For user interactivity. I have knowledge using Angular for web apps and Flutter for mobile applications.
             </p>
           </div>
         </div>
