responsive layout: projects section

--- a/index.html
+++ b/index.html
@@ -236,29 +236,29 @@
 
             <p class="font-semibold text-gray-600 text-base">
               <a href="https://youtu.be/F9M9cRdGHr4">
-                TahwissaDZ
-                <span class="font-normal text-gray-400">/ Mobile app</span>
+                TahwissaDZ <br class="block sm:hidden" />
+                <span class="font-normal text-gray-400"> <span class="hidden sm:inline">/</span> Mobile app</span>
               </a>
             </p>
 
             <p class="font-semibold text-gray-600 text-base">
               <a href="https://youtu.be/RWiWjvG5Li0">
-                Chat system
-                <span class="font-normal text-gray-400">/ Web app</span>
+                Chat system <br class="block sm:hidden" />
+                <span class="font-normal text-gray-400"> <span class="hidden sm:inline">/</span> Web app</span>
               </a>
             </p>
 
             <p class="font-semibold text-gray-600 text-base">
               <a href="https://youtu.be/dlbnGp4iVvY">
-                Inventory management
-                <span class="font-normal text-gray-400">/ Desktop app</span>
+                Inventory management <br class="block sm:hidden" />
+                <span class="font-normal text-gray-400"> <span class="hidden sm:inline">/</span> Desktop app</span>
               </a>
             </p>
 
             <p class="font-semibold text-gray-600 text-base">
               <a href="https://fouadchaker.github.io/goby-clone/">
-                Goby website clone
-                <span class="font-normal text-gray-400">/ Web page</span>
+                Goby website clone <br class="block sm:hidden" />
+                <span class="font-normal text-gray-400"> <span class="hidden sm:inline">/</span> Web page</span>
               </a>
             </p>
           </div>
@@ -278,13 +278,25 @@
           <div class="space-y-8 md:space-y-16">
             <h6 class="font-medium text-gray-400 text-base uppercase">Frameworks</h6>
 
-            <p class="font-semibold text-gray-600 text-base">Flutter | UI/UX design</p>
+            <p class="font-semibold text-gray-600 text-base">
+              Flutter <br class="block sm:hidden" />
+              <span class="hidden sm:inline">|</span> UI/UX design
+            </p>
 
-            <p class="font-semibold text-gray-600 text-base">ASP.NET core | SignalR | Real-time</p>
+            <p class="font-semibold text-gray-600 text-base">
+              ASP.NET core <br class="block sm:hidden" />
+              <span class="hidden sm:inline">|</span> SignalR | Real-time
+            </p>
 
-            <p class="font-semibold text-gray-600 text-base">JavaFX | MySQL</p>
+            <p class="font-semibold text-gray-600 text-base">
+              JavaFX <br class="block sm:hidden" />
+              <span class="hidden sm:inline">|</span> MySQL
+            </p>
 
-            <p class="font-semibold text-gray-600 text-base">TailwindCSS | Github actions</p>
+            <p class="font-semibold text-gray-600 text-base">
+              TailwindCSS <br class="block sm:hidden" />
+              <span class="hidden sm:inline">|</span> Github actions
+            </p>
           </div>
         </div>
       </div>
