--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
 
         <a
-          href="./#"
+          href="./resources/cv-bouzebra.pdf"
           class="px-7 py-3 md:px-9 md:py-4 font-medium md:font-semibold bg-gray-700 text-gray-50 text-sm rounded-md hover:bg-gray-50 hover:text-gray-700 transition ease-linear duration-200"
           >Get my CV</a
         >
@@ -285,7 +285,7 @@
 
             <p class="font-semibold text-gray-600 text-base">
               ASP.NET core <br class="block sm:hidden" />
-              <span class="hidden sm:inline">|</span> SignalR | Real-time
+              <span class="hidden sm:inline">|</span> SignalR | SQL Server
             </p>
 
             <p class="font-semibold text-gray-600 text-base">
