--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <h1 class="font-medium text-gray-700 text-3xl md:text-4xl mb-5">Skills</h1>
 
         <p class="font-normal text-gray-500 text-xs md:text-base mb-10 md:mb-20">
-          Here is a selection of the tools and technologies i utilise in my projects
+          Here is a selection of the tools and technologies I utilise in my projects
         </p>
 
         <div class="grid grid-cols-3 md:grid-cols-5 gap-16 lg:gap-32 place-items-stretch items-stretch content-center">
